[package]
name = "tyedev"
version = "0.3.3"
edition = "2021"
description = "Create and manage devcontainer configuration"
repository = "https://github.com/CodeMan99/tyedev"
license = "ISC"
readme = "README.md"
authors = ["Cody Taylor <codemister99@yahoo.com>"]
keywords = ["devcontainers", "containers", "vscode", "development", "configuration"]
categories = ["config", "command-line-utilities", "development-tools", "virtualization"]
include = ["LICENSE.txt", "src/", "static/"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-{ target }{ archive-suffix }"
bin-dir = "{ name }-{ version }-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[dependencies]
anyhow = { version = "1.0.77", features = ["backtrace"] }
clap = { version = "4.4.6", features = ["derive", "wrap_help"] }
clap_complete = { version = "4.4.4", optional = true }
clap-verbosity-flag = "2.1.0"
dirs = "5.0.1"
env_logger = "0.11.3"
human_format = "1.0.3"
inquire = { version = "0.6.2", features = ["editor"] }
log = "0.4.20"
ocipkg = "0.2.9"
regex = "1.10.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.107", features = ["preserve_order"] }
serde_jsonc = { version = "1.0.107", features = ["preserve_order"] }
tar = "0.4.40"
thiserror = "1.0.52"

[target.'cfg(windows)'.dependencies]
ascii_table = "4.0.3"

[target.'cfg(unix)'.dependencies]
ascii_table = { version = "4.0.3", features = ["auto_table_width"] }

[features]
default = ["completions"]
completions = ["dep:clap_complete"]
