[package]
name = "tyedev"
version = "0.4.0"
edition = "2021"
description = "Create and manage devcontainer configuration"
repository = "https://github.com/CodeMan99/tyedev"
license = "ISC"
readme = "README.md"
authors = ["Cody Taylor <codemister99@yahoo.com>"]
keywords = ["devcontainers", "containers", "vscode", "development", "configuration"]
categories = ["config", "command-line-utilities", "development-tools", "virtualization"]
include = ["LICENSE.txt", "src/", "static/"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-{ target }{ archive-suffix }"
bin-dir = "{ name }-{ version }-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }
clap = { version = "4.5.32", features = ["derive", "wrap_help"] }
clap_complete = { version = "4.5.47", optional = true }
clap-verbosity-flag = "2.2.3"
dirs = "5.0.1"
env_logger = "0.11.7"
human_format = "1.1.0"
inquire = { version = "0.6.2", features = ["editor"] }
log = "0.4.26"
oci-client = "0.14.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
serde_jsonc = { version = "1.0.108", features = ["preserve_order"] }
tar = "0.4.44"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }

[target.'cfg(windows)'.dependencies]
ascii_table = "4.0.5"

[target.'cfg(unix)'.dependencies]
ascii_table = { version = "4.0.5", features = ["auto_table_width"] }

[features]
default = ["completions"]
completions = ["dep:clap_complete"]
